# plapoint

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  plapoint_benchmark_common.h  plapoint_benchmark_cpu.h  plapoint_benchmark_gpu.h  plapoint_benchmarks.cpp
cmake/: check_benchmark_invalid_args.cmake  check_gpu_icp_benchmark_rows.cmake  plapointConfig.cmake.in
docs/superpowers/plans/: 2026-05-07-plapoint-algorithms.md  2026-05-07-plapoint-architecture.md  2026-05-08-plapoint-phase3.md  2026-06-04-plapoint-optimization.md  2026-06-05-plapoint-gpu-icp.md  2026-06-05-plapoint-p0-p3-performance.md  2026-06-10-plapoint-real-validation-performance.md
docs/superpowers/specs/: 2026-05-07-plapoint-algorithms-design.md  2026-05-07-plapoint-architecture-design.md
include/plapoint/core/: point_cloud.h
include/plapoint/features/: normal_estimation.h  normal_refinement.h
include/plapoint/filters/: filter.h  preprocessing.h  radius_outlier_removal.h  statistical_outlier_removal.h  uniform_downsample.h  voxel_grid.h
include/plapoint/gpu/: cuda_check.h  filter_compaction.h  filter_indices.h  height_grid.h  icp.h  knn.h  mesh_normals.h  voxel_cluster.h  voxel_grid.h
include/plapoint/io/: las_io.h  obj_io.h  ply_io.h  xyz_io.h
include/plapoint/mesh/: height_grid.h  marching_cubes.h  mesh_processing.h  poisson_reconstruction.h
include/plapoint/registration/: icp.h
include/plapoint/search/: kdtree.h  spatial_kdtree.h
scripts/: benchmark_gate_config.json  compare_benchmark_baseline.py  mesh_quality_report.py  report_cuda_hotspots.py  run_benchmark_baseline.py  run_cpu_only_validation.py  run_real_reconstruction_pipeline.py  run_real_reconstruction_regression.py  test_python_tools.py
src/: CMakeLists.txt  batch_knn_gpu.cu  filter_compaction_gpu.cu  filter_indices_gpu.cu  height_grid_gpu.cu  icp_gpu.cu  knn_gpu.cu  mesh_normals_gpu.cu  plapoint.cpp  voxel_cluster_gpu.cu  voxel_grid_gpu.cu
test/: CMakeLists.txt
test/quality/: mesh_generation_quality_test.cpp  mesh_quality_utils.h
test/unit/core/: point_cloud_attributes_test.cpp  point_cloud_normals_test.cpp  point_cloud_test.cpp  point_view_test.cpp
test/unit/features/: normal_estimation_test.cpp  normal_refinement_test.cpp
test/unit/filters/: filter_indices_gpu_test.cpp  filter_test.cpp  preprocessing_api_test.cpp  radius_outlier_removal_test.cpp  statistical_outlier_removal_test.cpp  uniform_downsample_test.cpp  voxel_grid_test.cpp
test/unit/io/: las_io_test.cpp  obj_io_test.cpp  ply_binary_test.cpp  ply_io_test.cpp  ply_stream_test.cpp  temp_file.h  xyz_io_test.cpp
test/unit/mesh/: height_grid_gpu_test.cpp  height_grid_test.cpp  marching_cubes_test.cpp  mesh_normals_gpu_test.cpp  mesh_processing_test.cpp  poisson_reconstruction_test.cpp  voxel_cluster_gpu_test.cpp
test/unit/registration/: icp_gpu_path_test.cpp  icp_test.cpp
test/unit/search/: kdtree_gpu_test.cpp  kdtree_test.cpp  spatial_kdtree_test.cpp
test/validation/: generate_reference.py  real_reconstruction_data_test.cpp  validation_test.cpp
test/validation/reference_data/: icp_R.npy  icp_source.npy  icp_t.npy  icp_target.npy  knn_dists_k1.npy  knn_dists_k16.npy  knn_dists_k4.npy  knn_dists_k8.npy  knn_indices_k1.npy  knn_indices_k16.npy  knn_indices_k4.npy  knn_indices_k8.npy  knn_points.npy  knn_queries.npy  normal_est_input.npy  normal_est_normals.npy  poisson_input.ply  radius_filter_inliers.npy  radius_filter_input.npy  uniform_down_input.npy  uniform_down_output.npy  voxelgrid_centroids.npy  voxelgrid_input.npy
testData/real_reconstruction/: README.md  gray_summary.json  image_camera_list.txt  merge_quality.json  summary.json
testData/real_reconstruction/pairs/002_001/: cloud.ply  cloud_gray.ply
testData/real_reconstruction/pairs/003_002/: cloud.ply  cloud_gray.ply
testData/real_reconstruction/pairs/004_003/: cloud.ply  cloud_gray.ply
testData/real_reconstruction/pairs/005_004/: cloud.ply  cloud_gray.ply
tools/: CMakeLists.txt  mesh_quality_report.cpp
